[package]
name = "text_classifier_extractor"
version = "0.1.0"
edition = "2021"
 
[dependencies]
# rig-core = "0.6.1"
rig-core = { git = "https://github.com/0xPlaygrounds/rig", rev = "f4400599a457823e3dbd1fe53c47f42c73ddd453" }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }

teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"